[package]
name = "rCLI"
version = "0.1.0"
edition = "2024"
[dependencies]
# 1. CLI Parsing
clap = { version = "4.4", features = ["derive"] }

# 2. Cryptography & Hashing
argon2 = "0.5.3"
aes-gcm = "0.10.3"
rand = "0.8.5"

# 3. Serialization (Saving the Vault)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 4. Terminal UI / UX Enhancement
rpassword = "7.3"
zeroize = { version = "1.7", features = ["derive"] }